--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230504143206">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230505162607">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230504143206"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230504143206"></script>
-	<script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js?_v=20230504143206"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js?_v=20230505162607"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js?_v=20230505162607"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js?_v=20230505162607"></script> -->
 
 </head>
 
@@ -37,7 +37,16 @@
 						<div class="gallery__left">
 							<picture><source srcset="img/1.webp" type="image/webp"><img src="img/1.png" class="gallery__item"></picture>
 							<picture><source srcset="img/2.webp" type="image/webp"><img src="img/2.png" class="gallery__item"></picture>
-							<picture><source srcset="img/5.webp" type="image/webp"><img src="img/5.png" class="gallery__item"></picture>
+							<!-- <picture><source srcset="img/5.webp" type="image/webp"><img src="img/5.png" class="gallery__item"></picture> -->
+							<div class="gallery__item">
+								<svg viewBox="0 0 1100 1200" width="100%" height="100%">
+									<mask id="mask">
+										<path class="path" d="M 815.232 989.736 c -8.712 -13.464 -23.496 -27.192 -37.488 -27.192 c -0.528 0 -0.792 0 -1.32 0 h -6.072 c -76.824 0 -139.392 -62.568 -139.392 -139.392 c 0 -7.128 0.792 -13.992 1.848 -20.328 c 183.216 -39.864 321.024 -203.28 321.024 -398.376 c 0 -19.272 -13.464 -29.304 -39.864 -29.832 c -0.792 -80.52 -61.776 -147.048 -140.184 -156.024 l 92.136 -135.96 c 16.368 -24.024 10.032 -57.024 -13.992 -73.392 c -24.024 -16.368 -57.024 -10.032 -73.392 13.992 l -101.904 150.216 c -36.168 -33.264 -83.952 -52.8 -134.904 -52.8 c -71.28 0 -137.28 38.808 -172.656 100.056 c -10.56 -2.112 -21.384 -3.432 -32.472 -3.432 c -86.856 0 -157.608 70.488 -158.4 157.08 c -22.968 1.32 -39.864 16.368 -39.864 29.832 c 0 195.096 137.808 358.512 321.024 398.376 c 1.056 6.336 1.848 13.2 1.848 20.328 c 0 76.824 -62.568 139.392 -139.392 139.392 h -6.072 c -0.528 0 -0.792 0 -1.32 0 c -13.992 0 -28.776 13.728 -37.488 27.192 l -38.016 59.928 c -6.336 10.032 -7.392 20.592 -2.64 29.04 c 4.752 8.448 14.256 13.464 26.136 13.464 h 567.6 c 11.88 0 21.384 -4.752 26.136 -13.464 c 4.752 -8.448 3.696 -19.272 -2.64 -29.04 L 815.232 989.736 z" fill="white" />
+
+									</mask>
+									<image xlink:href="img/7.png" mask="url(#mask)" width="100%" height="90%" />
+								</svg>
+							</div>
 
 						</div>
 						<div class="gallery__right">
@@ -68,7 +77,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20230504143206"></script>
+	<script src="js/app.min.js?_v=20230505162607"></script>
 </body>
 
 </html>
